--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "express": "~4.15.2",
     "lodash": "^4.17.4",
     "morgan": "~1.8.1",
-    "node-sass-middleware": "0.9.8",
-    "nodemon": "^1.11.0",
-    "serve-favicon": "~2.4.2"
+    "nodemon": "^1.11.0"
   }
 }
